# tokenlean

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  configure_claude.py  copilot-config.yaml  dependencias  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  savings.py  test_docker.sh
.claude/: CLAUDE.md
.devcontainer/: devcontainer.json
.github/workflows/: docker-tests.yml
aip-proxy/: README.md
aip-proxy/src/aip_proxy/: compressor.py  server.py  stats.py
