[tool.poetry]
name = "tokenlean"
version = "0.1.0"
description = "Token savings and proxy management for AI models"
authors = [
    "@gdilo <https://github.com/gdilo>",
    "@futesat <https://github.com/futesat>",
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
litellm = {extras = ["proxy"], version = ">=1.0.0"}
psutil = ">=5.9.0"
requests = ">=2.31.0"
dnspython = ">=2.4.0"
aip-proxy = ">=0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"